Field Hunt/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Fiscal_Year__c</fullName>
        <description>Returns the fiscal year of the Start Date or Start Date and Time field on the campaign, if they&apos;re not blank. The field is used to determine which Opportunities are deferred revenue when exporting to Great Plains</description>
        <formula>IF( 
  NOT( ISBLANK(StartDate) ), 
   TEXT( YEAR(StartDate) ),
   IF(
    NOT( ISBLANK(gf_sf__Start_Date_and_Time__c) ), 
     TEXT( YEAR( DATEVALUE(gf_sf__Start_Date_and_Time__c) ) ),
     NULL)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns the fiscal year of the Start Date or Start Date and Time field on the campaign, if they&apos;re not blank. The field is used to determine which Opportunities are deferred revenue when exporting to Great Plains</inlineHelpText>
        <label>Campaign Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID_18__c</fullName>
        <description>This is the long Campaign ID, as opposed to the partial, 15-digit ID shown in URLs.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the long Campaign ID, as opposed to the partial, 15-digit ID shown in URLs.</inlineHelpText>
        <label>Campaign ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Memb_Record_Type_ID__c</fullName>
        <formula>CASESAFEID(CampaignMemberRecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Memb Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Record_Type_ID__c</fullName>
        <formula>CASESAFEID(RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_Title__c</fullName>
        <description>Shows the number of days remaining until the event, plus the event name. Is used in dashboards to sort events.</description>
        <formula>LPAD(TEXT(DATEVALUE(gf_sf__Start_Date_and_Time__c ) -  TODAY()), 3 , &quot;0&quot;)  &amp; &quot; - &quot; &amp;  gf_sf__Event_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the number of days remaining until the event, plus the event name. Is used in dashboards to sort events.</inlineHelpText>
        <label>Days Remaining + Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Month__c</fullName>
        <description>Shows the month of the Event Start Date and Time.</description>
        <formula>CASE( TEXT( MONTH( DATEVALUE(gf_sf__Start_Date_and_Time__c) ) ), 
&quot;1&quot;, &quot;01. January&quot;,
&quot;2&quot;, &quot;02. February&quot;,
&quot;3&quot;, &quot;03. March&quot;,
&quot;4&quot;, &quot;04. April&quot;,
&quot;5&quot;, &quot;05. May&quot;,
&quot;6&quot;, &quot;06. June&quot;,
&quot;7&quot;, &quot;07. July&quot;,
&quot;8&quot;, &quot;08. August&quot;,
&quot;9&quot;, &quot;09. September&quot;,
&quot;10&quot;, &quot;10. October&quot;,
&quot;11&quot;, &quot;11. November&quot;,
&quot;12&quot;, &quot;12. December&quot;,
&quot;Error: Check &apos;Event Month&apos; field&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the month of the Event Start Date and Time.</inlineHelpText>
        <label>Event Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Update__c</fullName>
        <label>Force Update</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Ledger_Account__c</fullName>
        <description>This is the descriptive name of the General Ledger Account associated with this Campaign Record.</description>
        <inlineHelpText>Select the correct General Ledger Account for MEETING FEES ONLY.</inlineHelpText>
        <label>General Ledger Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Income - E-communications</fullName>
                </value>
                <value>
                    <fullName>Ad Income - Giving Forum</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Exhibitor Fees - Annual Conference</fullName>
                </value>
                <value>
                    <fullName>Fiscal Agent - MN Food Funder&apos;s Network</fullName>
                </value>
                <value>
                    <fullName>Grants - Advancing Voices</fullName>
                </value>
                <value>
                    <fullName>Grants - My Brother&apos;s Keeper</fullName>
                </value>
                <value>
                    <fullName>Grants - Public Policy</fullName>
                </value>
                <value>
                    <fullName>Job Posting Income</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Advancing Voices</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Annual Conference</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - CEO Circle</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Community Foundation Programs and Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Contract Training</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Corporate Programs and Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Co-sponsored and Pop-up Programs</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Family Philanthropy Programs and Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Government Relations</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Grantmaking for the 21st Century</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Member Networks</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Public Policy</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Ron McKinley Fellowship Program</fullName>
                </value>
                <value>
                    <fullName>Meeting Fees - Webinars</fullName>
                </value>
                <value>
                    <fullName>Member Dues - New</fullName>
                </value>
                <value>
                    <fullName>Member Dues - Renewal</fullName>
                </value>
                <value>
                    <fullName>MGO Subscription - New</fullName>
                </value>
                <value>
                    <fullName>MGO Subscription - Renewal</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Income</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Ledger_Code__c</fullName>
        <description>This is the General Ledger Account Code for this Campaign.</description>
        <inlineHelpText>Select the correct General Ledger Code for MEETING FEES ONLY.</inlineHelpText>
        <label>General Ledger Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>General_Ledger_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>000-1010</fullName>
                </value>
                <value>
                    <fullName>000-1145</fullName>
                </value>
                <value>
                    <fullName>000-2080</fullName>
                </value>
                <value>
                    <fullName>000-2090</fullName>
                </value>
                <value>
                    <fullName>000-2098</fullName>
                </value>
                <value>
                    <fullName>000-9995</fullName>
                </value>
                <value>
                    <fullName>140-3150</fullName>
                </value>
                <value>
                    <fullName>140-3300</fullName>
                </value>
                <value>
                    <fullName>190-3100-01</fullName>
                </value>
                <value>
                    <fullName>190-3100-02</fullName>
                </value>
                <value>
                    <fullName>190-3900</fullName>
                </value>
                <value>
                    <fullName>220-3150</fullName>
                </value>
                <value>
                    <fullName>320-3150</fullName>
                </value>
                <value>
                    <fullName>320-3300-01</fullName>
                </value>
                <value>
                    <fullName>322-3150</fullName>
                </value>
                <value>
                    <fullName>322-3300</fullName>
                </value>
                <value>
                    <fullName>323-3150</fullName>
                </value>
                <value>
                    <fullName>323-3300</fullName>
                </value>
                <value>
                    <fullName>324-3150</fullName>
                </value>
                <value>
                    <fullName>324-3300</fullName>
                </value>
                <value>
                    <fullName>325-3150</fullName>
                </value>
                <value>
                    <fullName>325-3300</fullName>
                </value>
                <value>
                    <fullName>327-3150</fullName>
                </value>
                <value>
                    <fullName>327-3200</fullName>
                </value>
                <value>
                    <fullName>327-3300</fullName>
                </value>
                <value>
                    <fullName>330-3150</fullName>
                </value>
                <value>
                    <fullName>330-3300</fullName>
                </value>
                <value>
                    <fullName>340-3150</fullName>
                </value>
                <value>
                    <fullName>340-3300</fullName>
                </value>
                <value>
                    <fullName>350-3150</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMPakCancellations__c</fullName>
        <description>Cancellations from IMPak.</description>
        <inlineHelpText>Cancellations from IMPak. Do not edit this field.</inlineHelpText>
        <label>IMPak Cancellatoins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IMPak_Total_Registrants__c</fullName>
        <description>Total Registrants from IMPak.</description>
        <inlineHelpText>Total Registrants from IMPak. Do not edit this field.</inlineHelpText>
        <label>IMPak Total Registrants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Campaign__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <value>001j000000cX4BJAA0</value>
            </filterItems>
            <infoMessage>Select the person who is acting as a lead on this Campaign.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>This is the Event Code from our old database.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Event Code from our old database.</inlineHelpText>
        <label>Legacy ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Campaign_Member_Fee__c</fullName>
        <description>Used only in the Quick Action to add Campaign Members.</description>
        <inlineHelpText>Enter the fee for the new campaign member.</inlineHelpText>
        <label>New Campaign Member Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Campaign_Member_Status__c</fullName>
        <description>Used in the Add Member to Campaign Quick Action only.</description>
        <inlineHelpText>Enter the status for the new campaign member.</inlineHelpText>
        <label>New Campaign Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Campaign_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Campaign Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (New Campaign Member)</relationshipLabel>
        <relationshipName>New_Campaign_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Non_Staff_Registrations__c</fullName>
        <description>Counts the number of people registered who are not MCF employees.</description>
        <inlineHelpText>Counts the number of people registered who are not MCF employees.</inlineHelpText>
        <label>Non-Staff Registrations</label>
        <summaryFilterItems>
            <field>CampaignMember.gf_sf__Organization__c</field>
            <operation>notEqual</operation>
            <value>001j000000cX4BJAA0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended, Complete, No Show, No-show, Registered</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registration_Goal__c</fullName>
        <description>The number of people we hope will register for the event.</description>
        <inlineHelpText>Enter the number of people you hope to register for the event.</inlineHelpText>
        <label>Registration Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gf_sf__Attendees__c</fullName>
        <inlineHelpText>This fields adds up all the Campaign members marked with a status of &quot;Attended&quot;</inlineHelpText>
        <label>Attendees</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Attended</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gf_sf__Code__c</fullName>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Committee_Affinity_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Committee_Affinity_Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>GroupMeetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_ID__c</fullName>
        <label>Drupal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Drupal_Type__c</fullName>
        <label>Drupal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__End_Date_and_Time__c</fullName>
        <label>End Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gf_sf__Event_Title__c</fullName>
        <inlineHelpText>Usually comes from Drupal but may need to be entered manually. This is the long form, more descriptive title for an event or campaign, and is used on external communications such as invoices.</inlineHelpText>
        <label>Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Event_Type__c</fullName>
        <inlineHelpText>The type of event being held</inlineHelpText>
        <label>Event Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gf_sf__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Login_Required__c</fullName>
        <label>Login Required</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Members_Only__c</fullName>
        <label>Members Only</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__No_shows_Cancellations__c</fullName>
        <inlineHelpText>This fields adds up all the Campaign members marked with a status of &quot;No-show&quot; or &quot;Canceled&quot;</inlineHelpText>
        <label>No-shows/Cancellations</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>No-show, Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gf_sf__Online_Registration__c</fullName>
        <label>Online Registration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sf__Start_Date_and_Time__c</fullName>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gf_sf__Time__c</fullName>
        <label>Time (deprecated)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gf_sps__Number_of_Sponsors__c</fullName>
        <description>How many sponsors are participating.</description>
        <label>Number of Sponsors</label>
        <summaryFilterItems>
            <field>CampaignMember.gf_sf__Registration_Type__c</field>
            <operation>equals</operation>
            <value>Sponsor</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Events_and_Meetings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>gf_sf__Start_Date_and_Time__c</columns>
        <columns>Lead_Contact__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.gf_sf__Events_and_Meetings</value>
        </filters>
        <filters>
            <field>gf_sf__Start_Date_and_Time__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Events and Meetings - This Year</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>gf_sf__Events_and_Meetings</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>gf_sf__Committee_Affinity_Group__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>gf_sf__Start_Date_and_Time__c</columns>
        <columns>gf_sf__End_Date_and_Time__c</columns>
        <columns>Lead_Contact__c</columns>
        <columns>gf_sf__Location__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.gf_sf__Events_and_Meetings</value>
        </filters>
        <label>Events and Meetings</label>
    </listViews>
    <listViews>
        <fullName>gf_sf__General_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.gf_sf__General</value>
        </filters>
        <label>General Campaigns</label>
    </listViews>
    <listViews>
        <fullName>gf_sf__Mailing_Lists</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.gf_sf__Mailing_List</value>
        </filters>
        <label>Mailing Lists</label>
    </listViews>
    <listViews>
        <fullName>gf_sps__Projects</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.gf_sps__Project</value>
        </filters>
        <label>Projects</label>
    </listViews>
    <listViews>
        <fullName>xEvents_This_Year_with_No_Parent_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>gf_sf__Start_Date_and_Time__c</columns>
        <columns>Lead_Contact__c</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.gf_sf__Events_and_Meetings</value>
        </filters>
        <filters>
            <field>gf_sf__Start_Date_and_Time__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>xEvents This Year with No Parent Camp</label>
    </listViews>
    <recordTypes>
        <fullName>gf_sf__Events_and_Meetings</fullName>
        <active>true</active>
        <description>This record type is for events or meetings such as those for committees or affinity groups.</description>
        <label>Events and Meetings</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sf__General</fullName>
        <active>true</active>
        <description>Use this record type for all campaigns that are not Mailing lists or Events</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sf__Mailing_List</fullName>
        <active>true</active>
        <description>Use this record type when setting up a new mailing list</description>
        <label>Mailing List</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sf__Product</fullName>
        <active>false</active>
        <description>To be used for tracking sales of individual products.</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>gf_sps__Project</fullName>
        <active>false</active>
        <description>Use to track a project or other body of work</description>
        <label>Project</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>